--- a/compose.yml
+++ b/compose.yml
@@ -2,11 +2,10 @@ version: '3.8'
 services:
   app:
     build:
-      context: ..
+      context: .
       dockerfile: ./Dockerfile
     volumes:
       - ./:/app/:cached
       - ~/.ssh:/root/.ssh
-    command: sleep infinity
     ports:
       - "22111:8000"
